// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "triggers": "mock-triggers",
    },
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "data": Object {
        "content": Object {
          "indent": 1,
        },
      },
      "nodes": Array [
        Object {
          "leaves": undefined,
          "object": "text",
        },
      ],
      "object": "block",
      "type": "ObojoboDraft.Chunks.Code.CodeLine",
    },
    Object {
      "data": Object {
        "content": Object {
          "indent": 0,
        },
      },
      "nodes": Array [
        Object {
          "leaves": undefined,
          "object": "text",
        },
      ],
      "object": "block",
      "type": "ObojoboDraft.Chunks.Code.CodeLine",
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`Code Converter slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "textGroup": Array [
      Object {
        "data": Object {
          "indent": undefined,
        },
        "text": Object {
          "styleList": Array [],
          "value": "mockCode",
        },
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Code Converter slateToObo converts a Slate node to an OboNode with triggers 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "textGroup": Array [
      Object {
        "data": Object {
          "indent": undefined,
        },
        "text": Object {
          "styleList": Array [],
          "value": "mockCode",
        },
      },
    ],
    "triggers": "mock-triggers",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
